@@ -6,6 +6,8 @@
 - Script source for table DCIs
 - Driver for IgniteNet devices
 - Network device database (allows some device specific information to be provided without drivers)
+- Server certificate's key can be stored in separate file
+- Multiple CA certificates can be specified in server configuration file
 - Management console:
 	- Node's zone name shown in alarm browser and object overview when zoning is enabled
 	- Sorting option in table based charts on dashboards (to implement "Top N" style charts)
